# kud-server

./: .gitignore  API.md  Cargo.toml  diesel.toml  new.md
client/: package-lock.json  package.json
client/src/: middleware.ts
client/src/app/: layout.tsx  not-found.tsx  page.tsx
client/src/lib/: api.ts  auth.ts  types.ts
migrations/00000000000001_init_tables/: down.sql  up.sql
migrations/00000000000002_add_week_day/: down.sql  up.sql
migrations/2025-10-23-104309_init/: down.sql  up.sql
migrations/2025-10-23-133300_add_lastseen_to_user/: down.sql  up.sql
migrations/2025-10-23-191120_add_scheduled_start_to_huddle/: down.sql  up.sql
migrations/2026-02-09-095737_adjust_user_table/: down.sql  up.sql
migrations/2026-02-09-123629_create_rosters_and_activity_logs/: down.sql  up.sql
migrations/2026-02-09-192417_create_users_rosters/: down.sql  up.sql
migrations/2026-02-09-195135_add_unique_constraint_to_users_rosters/: down.sql  up.sql
migrations/2026-02-19-110500_add_gender_counts_to_rosters/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs  swagger.rs
src/auth/: dto.rs  google_oauth.rs  jwt.rs  middleware.rs  mod.rs  service.rs
src/dto/: analytics.rs  attendance.rs  events.rs  mod.rs  pagination.rs  roster.rs  user.rs
src/errors/: mod.rs
src/handlers/: analytics.rs  auth.rs  events.rs  logs.rs  mod.rs  roster.rs  user_attendance.rs  users.rs
src/helpers/: mod.rs
src/macros/: db.rs  mod.rs
src/mailer/: config.rs  email.rs  mod.rs  types.rs
src/models/: activity_logs.rs  events.rs  mod.rs  roster.rs  user_attendance.rs  users.rs  users_roster.rs
src/services/: activity_logs.rs  analytics.rs  events.rs  mod.rs  roster.rs  tmp.rs  user_attendance.rs  users.rs
(+17 files in other folders)
