[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
bb8 = "0.9.0"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
diesel = { version = "2.2.11", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
diesel-async = { version = "0.6.1", features = ["bb8", "deadpool", "pool", "postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
rand = "0.9.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
async-channel = "2.5.0"
tower-http = { version = "0.6.6", features = ["full"] } #remember to remove this full feature
headers = "0.4.1"
diesel-derive-enum = { version = "2", features = ["postgres"] }
cookie = "0.18.1"
diesel_migrations = { version = "*", features = ["postgres"] }
base64 = "0.21.3"
strum = "0.27.2"
strum_macros = "0.27.2"
oauth2 = "5.0.0"
reqwest = "0.12.24"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
handlebars = "6.3.2"
csv = "1.4.0"
chrono-tz = "0.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }